--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h2 {
 }
 
 .header-img {
-    width: 150px;
+    width: auto;
     height: auto;
     border-radius: 50%;
     margin: 10px;
@@ -139,7 +139,7 @@ h2 {
 }
 
 .header h1 {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
 }
 
 .header h2 {
