--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h2 {
   height: auto;
   border-radius: 50%;
   margin: 10px;
-  margin-top: auto;
+  margin-top: 100px;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
@@ -532,4 +532,3 @@ textarea {
     width: 0;
     height: 0;
   }
-  
