--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h2 {
   height: auto;
   border-radius: 50%;
   margin: 10px;
-  margin-top: 100px;
+  margin-top: auto;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
@@ -215,6 +215,8 @@ h2 {
 .about {
   display: flex;
   flex-direction: column;
+  align-items: center; /* Align items horizontally in the center */
+  text-align: center; /* Align text content in the center */
 }
 
 .about-item {
@@ -262,6 +264,7 @@ h2 {
   line-height: 35px;
   padding: 5px 10px;
   border-radius: 15px;
+  margin: 5px; /* Add margin to separate skill badges */
 }
 
 /*=============== PROJECTS SECTION ===============*/
