--- a/style.css
+++ b/style.css
@@ -71,6 +71,17 @@ h2 {
   width: 100%;
 }
 
+.background-media {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+}
+
 .container {
   display: flex;
   align-items: center;
