--- a/style.css
+++ b/style.css
@@ -272,12 +272,13 @@ h2 {
 .skill {
   background-color: var(--accent-color);
   color: #fff;
-  line-height: 35px;
+  line-height: 1;
   padding: 5px 10px;
   border-radius: 15px;
   margin: 5px; /* Add margin to separate skill badges */
   font-size: 12px; /* Adjust font size to fit all skills */
   max-width: 150px; /* Set maximum width for each skill badge */
+  display: inline-block; /* Display each skill badge as an inline-block element */
 }
 
 /*=============== PROJECTS SECTION ===============*/
